[Fix] React Table column overflow issue

--- a/datahub/webapp/ui/Table/Table.scss
+++ b/datahub/webapp/ui/Table/Table.scss
@@ -104,12 +104,6 @@
         }
     }
 
-    &.freeze-header {
-        .rt-thead {
-            overflow-y: scroll;
-        }
-    }
-
     &.hide-header {
         .rt-thead {
             display: none;
